--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "nodemongodemo",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +11,15 @@
     "express": "^4.17.1",
     "hbs": "^4.1.1",
     "mongodb": "^3.6.3"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sinteOne1/ASMCloud.git"
+  },
+  "bugs": {
+    "url": "https://github.com/sinteOne1/ASMCloud/issues"
+  },
+  "homepage": "https://github.com/sinteOne1/ASMCloud#readme",
+  "description": ""
 }
